@@ -3,6 +3,7 @@
 (2013-03-04)
  * Add the checkbox "Move the window when the video area is dragged" 
    in preferences -> interface.
+ * The playlist remembers the current file.
 
 (2013-03-03)
  * Add an option in the help menu to show a first steps guide.
